<resources>
    <string name="app_name">Simple To Do</string>
    <string name="add">ADD</string>
    <string name="clear">CLEAR</string>
    <string name="delete">DELETE</string>
    <string name="addTask">Type in a new task here</string>
    <string name="removeTask">Type in the index of the task to be removed</string>
    <string-array name="spinnerItems">
        <item>Add a new task</item>
        <item>Remove a task</item>
    </string-array>
</resources>